--- a/bower.json
+++ b/bower.json
@@ -3,5 +3,9 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.1.1"
+  },
+   "dependencies": {
+    "moment": "~2.9.0",
+    "underscore": "~1.8.2"
   }
 }
