--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,8 @@
    "dependencies": {
     "moment": "~2.9.0",
     "underscore": "~1.8.2",
-    "ngCordova": "0.1.23-alpha" 
+    "ngCordova": "0.1.23-alpha",
+    "angular-twilio": "*",
+    "angular-twilio-verification": "*"
   }
 }
