--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
     "moment": "~2.9.0",
     "underscore": "~1.8.2",
     "ngCordova": "0.1.23-alpha",
-    "angular-twilio": "*",
+    "angular-twilio": "http://github.com/bcfchen/angular-twilio.git#bf4dc1d3faebfe08a901b6e26d135d815f9cb6de",
     "angular-twilio-verification": "*"
   }
 }
