--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
   },
    "dependencies": {
     "moment": "~2.9.0",
-    "underscore": "~1.8.2",
+    "lodash": "~3.10.1",
     "ngCordova": "0.1.23-alpha",
     "angular-twilio": "http://github.com/bcfchen/angular-twilio.git#bf4dc1d3faebfe08a901b6e26d135d815f9cb6de",
     "angular-twilio-verification": "*"
