add privacy policy and terms of use links and add in app browser cordova lib

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
     "ionic-plugin-keyboard",
-    "cordova-plugin-email-composer"
+    "cordova-plugin-email-composer",
+    "cordova-plugin-inappbrowser"
   ],
   "cordovaPlatforms": [
     "ios"
