--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "lodash": "~3.10.1",
     "ngCordova": "0.1.23-alpha",
     "angular-twilio": "http://github.com/bcfchen/angular-twilio.git#bf4dc1d3faebfe08a901b6e26d135d815f9cb6de",
-    "angular-twilio-verification": "*"
+    "angular-twilio-verification": "*",
+    "angular-lazy-img": "*"
   }
 }
